dailyplan - refactoring, logging, delete daily plan(do not delete if submitted orders exists)